# fastai-practice

./: README.md  pyproject.toml
