[tool.poetry]
name = "fastai-practice"
version = "0.1.0"
description = ""
authors = ["Phil Whelan <phil123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastai = "^2.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
